feat: Store arrival and leave times and count late arrivals from them
- Add ankunftszeit and verlassen_um columns to Erfassung
- Stop appending "Verspätung: N Minuten" to comments
- Count late arrivals from the stored arrival time against a configurable start time (UNTERRICHTSBEGINN, default 08:00)
- Keep counting older records without a stored time as late if their comment mentions "Verspätung"
- Save attendance in one transaction with three queries instead of per-student lookups
- Validate all entries before saving: students must belong to the group, status must exist, leave time not before arrival
- Show validation errors on the form; nothing is saved if any entry is invalid
- Prefill the form with today's saved status, times and comment
- Show status, arrival and leave time as a tooltip in the monthly list
- Document the new columns, start time setting and prod schema changes in README
- Rewrite ErfassungServiceTest and add StatistikServiceTest and web tests for stored times and group checks